# ICP

./: CMakeLists.txt  README.md
data/: README.md  bun000.ply  bun045mesh.ply  bunny045.ply
src/: icp.cpp  icp.hpp  icp1_simple.cpp  icp2_iterative_view.cpp  icp3_with_normal.cpp  icp_simple.cpp  icp_simple.hpp  test.cpp
src/v1.0/: icp.cpp  nanoflann  test  test.cpp  test_matrix_kdtree  test_matrix_kdtree.cpp
